# threat-correlation-engine

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
docs/: architecture.md
rules/: arp_spoof.yml  dns_tunnel.yml  port_scan.yml
src/: __init__.py  correlator.py  dispatcher.py  engine.py  loader.py
tests/: test_correlator.py  test_engine.py
tests/fixtures/: sample_alerts.json
